# apps/server_core/internal/platform/observability/cors.go
@@ -9,6 +9,7 @@ var defaultCORSAllowedHeaders = []string{
 	"Authorization",
 	"Accept",
 	"Content-Type",
+	"X-CSRF-Token",
 	"X-Trace-Id",
 }
 
